--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     <title>C.H.U.D. Project</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='app.css'>
-    <script src='app.js'></script>
+    
 </head>
 <body>
  
-    <h1 >I LIKE PROGRAMMING</h1>
+    <!-- <h1 >I LIKE PROGRAMMING</h1>
     <h3>I LIKE PROGRAMMING</h3>
     <h1 id='special'>I LIKE PROGRAMMING</h1>
     <h1 id ='special2'>Liam is "Special"</h1>
-    <h1>Dad is a stinky C.H.U.D.!!! </h1>
-    
+    <h1>Dad is a stinky C.H.U.D.!!! </h1> -->
+   
+    <h1 id="main-heading"> Todo List</h1>
+    <ul>
+        <li class="todo">Go To Work</li>
+        <li class="todo">Study Javascript</li>
+        <li class="todo">Study The Dark Arts</li>
+        <li class="todo">Go To Sleep</li>
+    </ul>
+    <section id ='results'></section>
+    <script src='app.js'></script>
 </body>
 </html>
