--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 
 
 </head>
-<body>
+<body> 
    
     <h1 id="main-heading"> ToDo List</h1>
-     <form id="form">
+     <form action= "" id="add-item">
          <label for="todoInput">Add New ToDo</label>
          <input type="text" id="todoInput">
          <input type="button" id="cmdNewtodo" value= "New ToDo">
      </form>
+     
     <ul id="todoList">        
-        
+        <li>friend<button>Remove</button></li> 
     </ul>
     <section id ='results'></section>
     <script src='app.js'></script>
