get file reader working

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <input type="text"  id="bottomTextInput">
 
           <label>Select an Image</label>  
-         <input type="file"></input> 
+         <input type="file" id="imageFileInput"></input> 
         <button id=generateBtn>Generate Meme</button>
           <canvas id="meme"></canvas>
         </div>
