--- a/index.html
+++ b/index.html
@@ -24,13 +24,22 @@
     #meme {
         width: 100%
     } 
-    #imageClass div {
-        size: 24;
+    .topClass {
+        size: 24; 
         color : green; 
-        position : top, centered;
-        background-color: blueviolet;
-        margin: 2em;
+         position : top, centered;
+     
+        margin: 2em; 
     }
+    .bottomClass {
+         size: 24; 
+        color : purple; 
+         position : bottom, centered;
+     
+        margin: 2em; 
+    }
+
+   
 </style>
 </head>
 <body>
