--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     } 
     .topClass {
         font-size: 240; 
-        color : rgb(20, 5, 105); 
+        color : purple; 
          margin-top: 250px;
              
     }
