--- a/Module 8/index.html
+++ b/Module 8/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <ul>
-        <li><input type="checkbox" checked>Visit the pyramids</li>
-        <li><input type="checkbox">Visit an Asian country</li>
-        <li><input type="checkbox">Create billion dollar business</li>
-        <li><input type="checkbox" checked>Build a house</li>
-        <li><input type="checkbox">Buy a Ferrari</li>
-        <li><input type="checkbox" checked>Build a gansta ass back yard that includes a pool and one of them decks with the built-in grills</li>
-        <li><input type="checkbox">Buy a blob fish</li>
-    </ul>
- <script src="main.js"></script>  
- 
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine-html.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/boot.js"></script>
+    <script type="text/javascript" src="foreach-map-filter.js"></script>
+    <script type="text/javascript" src="foreach-map-filter.test.js"></script>
+  </head>
+  <body>
+
+  </body>
 </html>
