--- a/Module 8/index.html
+++ b/Module 8/index.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 8</title>
+<style>
+    .letter {
+ transition: color 750ms;
+}
+.newContainerInput {
+  position: relative;
+  float: left;
+  width: 15em;
+  height: 15em;
+  margin: 1em;  
+}
+</style>
 </head>
+
 <body>
+    <form>
+        <label>Please type in your name</label>
+        <input type="text" id="name"> </input>
+        <button id="submitBtn" >Submit</button>
+        
+    </form>
     <script src="notes.js"></script> 
 </body>
 </html>
