--- a/Module 10/index.html
+++ b/Module 10/index.html
@@ -7,7 +7,7 @@
     <title>Module 10</title>
 </head>
 <body>
-    <script src="RestSpreadExercises.js"></script>   
+    <script src="main.js"></script>   
 </body>
 
 </html>
