connect-four exercise

--- a/Module 11/connect-four/index.html
+++ b/Module 11/connect-four/index.html
@@ -8,7 +8,7 @@
 <div id="game">
   <table id="board">
    
-      <tr id="column-top">
+      <!-- <tr id="column-top">
         <td id="0"></td>
         <td id="1"></td>
         <td id="2"></td>
@@ -71,7 +71,7 @@
         <td id="5-4"></td>
         <td id="5-5"></td>
         <td id="5-6"></td>
-      </tr>
+      </tr> -->
 
   </table>
 </div>
