--- a/Module 12 ES2015 Classes/index.html
+++ b/Module 12 ES2015 Classes/index.html
@@ -7,6 +7,6 @@
     <title>Module 12 Classes</title>
 </head>
 <body>
-    <script src="OO Challenge.js"></script>   
+    <script src="main.js"></script>   
 </body>
 </html>
