--- a/Module 13/index.html
+++ b/Module 13/index.html
@@ -11,7 +11,7 @@
     <button id= a>one</button>
     <button id= b>two</button>
     <button id= c>3</button>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="main.js"></script>   
 </body>
 </html>
